# photo-album

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.nginx  Dockerfile.php-app  README.md  build.sh  deploy.sh  docker-compose.yml  logging.conf  main.py  migration-notes.txt  pyproject.toml  pytest.ini  requirements.txt  run-local.sh  run.py  sonar-project.properties  tailwind.config.js
application/: build.php  checkPW.php  functions.php  index.html  index.php  login.php  logout.php  secureIt.php  wrong.php
application/css/: lightgallery.css  screen-v2.css
application/fonts/: icomoon.eot
config/: vars.sh
config/nginx/: php.conf  site.conf
hack/: bootstrap.sh
k8s/: computeclass.yaml  create-ingress.yml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  photos-app.yml  photos-nginx.yml  service-account.yaml  service.yaml
photo-album/: logging.conf  main.py  pyproject.toml  run.py  tailwind.config.js
photo-album/processing/: rename_images.py  rename_movies.py  resize_images.py
photo-album/slideshow/: albums.py  auth.py  config.py  images.py  likes.py  logger.py  photos.py  routes.py  secret.py  videos.py
photo-album/slideshow/clients/: firestore.py  storage.py
photo-album/slideshow/static/css/: main.css  slideshow.css
photo-album/slideshow/templates/: daisy-photos.html  daisy.html  login.html  main.html  photo-album.html  photos.html  videos.html
photo-album/slideshow/templates/daisy/: photos.html  videos.html
photo-album/slideshow/templates/olly-aged-4/: videos.html
photo-album/slideshow/templates/our-honeymoon/: photos.html
photo-album/slideshow/templates/our-wedding/: photos.html
photo-album/slideshow/templates/shared/: _base.html  _header.html
photo-album/slideshow/templates/the-tremendous-twos/: photos.html
photo_album/: albums.py  auth.py  likes.py  photos.py  routes.py  secret.py  videos.py
photo_album/clients/: firestore.py
photo_album/static/css/: main.css
photo_album/templates/: error.html  login.html  main.html  photo-album.html  photos.html  videos.html
photo_album/templates/shared/: _base.html
processing/: rename_dot_jpg.py  rename_movies.py  resize_images.py
scripts/: bootstrap.sh  build.sh  deploy.sh
slideshow/: config.py  images.py  main.py  routes.py
slideshow/clients/: storage.py
slideshow/templates/: main.html
terraform/: .terraform.lock.hcl  domain.tf  providers.tf  service.tf  storage.tf  variables.tf
tests/: conftest.py  test_main.py
utils/: list-gcr-images.sh
(+5 files in other folders)
