[tool.poetry]
name = "photo-album"
version = "0.1.0"
description = "Web-based Photo Album written in Python"
authors = ["Alex M <alex@alexos.dev>"]
license = "GNU GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
jinja2 = "^3.1.4"
jinja2-fragments = "^1.5.0"
pytailwindcss = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
