[project]
name = "photo-album"
version = "0.1.0"
description = "Web-based Photo Album written in Python"
authors = [{name = "Alex M", email = "alex@alexos.dev"}]
license = {text = "GNU GPLv3"}
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.121.0",
    "pydantic-settings>=2.3.4",
    "jinja2>=3.1.4",
    "jinja2-fragments>=1.5.0",
    "pytailwindcss>=0.3.0",
    "pillow>=12.0.0",
    "google-cloud-storage>=3.0.0",
    "PyJWT",
    "google-cloud-secret-manager>=2.20.1",
    "google-crc32c",
    "requests>=2.32.3",
    "authlib>=1.3.1",
    "itsdangerous>=2.2.0",
    "structlog>=25.0.0",
    "grpcio==1.76.0",  # pin gRPC due to MacOS issues in 1.65
    "prometheus-fastapi-instrumentator>=7.0.0",
    "google-cloud-firestore>=2.19.0",
    "uvicorn",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "flake8>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
